--- a/src/components/ContactListItem/ContactListItem.module.css
+++ b/src/components/ContactListItem/ContactListItem.module.css
@@ -1,3 +1,12 @@
+.list_item {
+  display: flex;
+  margin-left: 20px;
+  justify-content: space-between;
+}
+.list_item:not(:last-child) {
+  border-bottom: #000 1px solid;
+  margin-bottom: 3px;
+}
 .delete_button {
   width: fit-content;
   padding: 5px;
